--- a/prj0/app.json
+++ b/prj0/app.json
@@ -2,6 +2,7 @@
   "pages": [
     "pages/index/index",
     "pages/main/main",
+    "pages/main2/main2",
     "pages/logs/logs"
   ],
   "window": {
